# hoststack

./: .gitignore  CMakeLists.txt  License.txt  Make.common.inc  Make.defines.freebsd  Make.defines.linux  Make.defines.macos  Make.defines.solaris  Makefile  README.md  README_CN.md  build.sh  install.sh  install.sh.in  package.sh  trans.sh
doc/: README.md
etc/: CMakeLists.txt  backerd.service  hostname  hosts  hoststackd.service
include/: sole.h
include/usgcommon/: Makefile  comm_typedef.h  log.h  logger.h  properties_config.h  sem_util.h  socket_io.h  usg_common.h  usg_typedef.h
include/usgcommon/impl/: logger_impl.h  properties_config_impl.h  sem_util_impl.h  socket_io_impl.h  usg_common_impl.h
lib/: libuuid.so.1.0.0
lib/pkgconfig/: uuid.pc
src/: CMakeLists.txt  Makefile  Makefile.bk  container.c  container.h  container_cli.c  container_dao.c  container_dao.cpp  container_dao.h  container_fs.c  container_fs.cpp  container_fs.h  container_info.cpp  container_ls_cli.c  container_manager.c  container_manager.h  container_run_cli.c  container_service.c  container_service.cpp  container_service.h  gen_rootfs.sh  hoststack.cpp  hoststack_config.h.in  hoststack_supervisor.cpp  kucker.c  kucker.cpp  kucker_config.c  kucker_config.h  kucker_config.h.in  kucker_daemon.c  kucker_daemon.cpp  kucker_supervisor.cpp  logger_factory.h  path_assembler.c  path_assembler.cpp  path_assembler.h
src/cli/: container_attach_cli.c  container_attach_cli.cpp  container_attach_cli.h  container_cli.c  container_cli.cpp  container_cli.h  container_exec_cli.c  container_exec_cli.cpp  container_exec_cli.h  container_ls_cli.c  container_ls_cli.cpp  container_ls_cli.h  container_rm_cli.c  container_rm_cli.cpp  container_rm_cli.h  container_run_cli.c  container_run_cli.cpp  container_run_cli.h  container_start_cli.c  container_start_cli.c.2  container_start_cli.cpp  container_start_cli.h  container_stop_cli.c  container_stop_cli.cpp  container_stop_cli.h
src/cli/include/: container_cli.h  container_exec_cli.h  container_ls_cli.h  container_start_cli.h  container_stop_cli.h
src/common/: Makefile  log.cpp  logger.cpp  logger.h  properties_config.cpp  sem_util.cpp  sem_util.h  socket_io.cpp  usg_common.cpp  usg_common.h
src/common/include/: comm_inc.h  log.h  logger.h  socket_io.h  usg_common.h
src/include/: container.h  container_cli.h  container_ls_cli.h  container_manager.h  container_run_cli.h  kucker_config.h
src/pty/: container_fs.c  pty_exec_util.c  pty_exec_util.cpp  pty_exec_util.h  pty_fork.c  pty_fork.cpp  pty_fork.h  pty_master_open.cpp  pty_master_open_bsd.c  script.c  tty_functions.cpp  tty_functions.h
src/util/: container_dao.cpp  container_dao.h  container_fs.cpp  container_fs.h  container_info.cpp  container_info.h  container_service.cpp  container_service.h  logger_factory.h  path_assembler.cpp
test/: CMakeLists.txt  Makefile  clone1.c  clone_user.c  gen_rootfs.sh  getopt_long.c  open_file.cpp  string_find.c  test.c  test.cpp  test_file.cpp  test_ipc.sh  test_pgrp.cpp  test_pid.c  test_str.cpp  test_strtok.cpp  test_tty.cpp  test_uuid.c  test_uuid.cpp
test_fifo/: Makefile  fifo_seqnum.h  fifo_seqnum_client  fifo_seqnum_client.c  fifo_seqnum_client.cpp  fifo_seqnum_server  fifo_seqnum_server.c  fifo_seqnum_server.cpp
test_pty/: pty_fork.c  pty_fork.cpp  pty_fork.h  pty_master_open.h  script  script.cpp  tty_functions.c  unbuffer  unbuffer.cpp
